--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               <!-- Accent-colored raised button with ripple -->
               <br />
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                type="button"
                 onclick="myButtonClicked()">
                 Done
               </button>
